# scanvoca

./: .gitignore  3000word.csv  3000word.xlsx  ANALYSIS_REPORT.md  DB_visual.md  DB_visual_complete.md  DEPLOYMENT_GUIDE.md  GPT_SETUP_GUIDE.md  IMPLEMENTATION_GUIDE.md  PRIVACY_POLICY.md  QUICK_INTEGRATION.md  README.md  STORE_LISTING.md  WORKLOG(3).md  add_plan.md  analysis.md  app.json  basic-100-words.csv  blog.md  camera.html  check-db.js  check_db.py  claude.md  complete-wordbook-integration-plan.md  console  convert-icon.js  convert-pos-to-korean.js  crop.html  drawing_agent.md  fail_log.md  fix-critical-errors.js  fix-database-references.js  fix-syntax-errors.js  fix-word-levels.js  gemini.md  generate-100-words.js  generate-complete-wordbook.js  generate-word-definitions.js  home.html  idea.md  (+30 more)
server/: .dockerignore  .env.example  .gitignore  CLOUD_RUN_DEPLOYMENT.md  DEPLOY_COMMANDS.txt  Dockerfile  INSTALL_GUIDE.md  QUICK_START.md  README.md  alembic.ini  check_db.py  check_user_wordbooks.py  deploy-auto.sh  deploy-cloudrun.txt  deploy-final.ps1  deploy-final.sh  deploy-now.sh  deploy.sh  deployment_success.md  deployment_url.txt  docker-compose.yml  ingest_exam_pdfs.py  install-gcloud.ps1  pyproject.toml  pytest.ini  redeploy.txt  requirements.txt  seed_3000words.txt  seed_blog_topics.py  seed_demo_wordbooks.py  seed_faqs.py  seed_idioms.py  seed_idioms.txt  seed_wordmaster_2000.py  seed_words.py  set_admin.py  setup-commands.sh  start.sh  upgrade_wordmaster_words.py
server/alembic/: env.py
server/app/: __init__.py  main.py
server/scripts/: import_complete_wordbook.py  import_complete_wordbook_fixed.py
server/tests/: __init__.py  conftest.py  test_auth.py  test_auto_blog.py  test_blog.py  (+2 more)
(+377 files in other folders)
